@@ -1,3 +1,7 @@
+Wed Jun 12 12:07:04 2013  Tanaka Akira  <akr@fsij.org>
+
+	* sprintf.c (rb_str_format): Fix a dynamic format string.
+
 Wed Jun 12 12:04:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (rb_ary_uniq_bang): must not be modified once frozen even in
